# reuse-codex-auth.json

./: .gitignore  README.md  auth.json.example  config.json  proxy.py  pyproject.toml
docs/: ISSUES.md  PLAN.md  TASK.md  TESTS.md
tests/: test_translate.py
